# wintermelon_scribe

./: .env.example  .gitignore  README.en.md  README.md  main.py  pyproject.toml  requirements.txt  speech_transcription.py  start.sh
